--- a/caliph.my.id/index.html
+++ b/caliph.my.id/index.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- META AREA -->
-	<title>Caliph Website - Caliph Dev</title>
+	<title>VAJIRA MD Website - VajiraOfficial</title>
 	<meta name="robots" content="follow, index"/>
 	<meta name="keywords" content="caliph,caliphdev,caliphblog,caliph my id,caliph blog,caliphmyid" />
 	<link rel="shortcut icon" href="public/storage/62b96f1f3085d.jpg">
@@ -93,19 +93,7 @@
 				</a>
 			</div>
 			<!-- Menu @s -->
-			<div class="header-navbar header-navbar-s1">
-				<nav class="header-menu" id="example-menu-04">
-					<ul class="menu menu-s2 animated" data-animate="fadeInDown" data-delay=".75">
-						<li class="menu-item"><a class="menu-link nav-link" href="index.html">Home</a></li><li class="menu-item"><a class="menu-link nav-link" href="blog.html">Blog</a></li><li class="menu-item"><a class="menu-link nav-link" href="store.html">Store</a></li><li class="menu-item"><a class="menu-link nav-link" href="projects.html">Projects</a></li><li class="menu-item has-sub"><a class="menu-link nav-link menu-toggle" href="javascript:void(0)">Contact Me</a><ul class="menu-sub menu-drop"><li class="menu-item"><a class="menu-link nav-link" href="https://wa.me/6285174336766">WhatsApp</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://t.me/caliphdev">Telegram</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://instagram.com/caliph.dev">Instagram </a></li><li class="menu-item"><a class="menu-link nav-link" href="https://twitter.com/caliphdev">Twitter</a></li></ul></li><li class="menu-item has-sub"><a class="menu-link nav-link menu-toggle" href="javascript:void(0)">Tools</a><ul class="menu-sub menu-drop"><li class="menu-item"><a class="menu-link nav-link" href="https://whois.caliph.my.id/">WHOIS</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://clp.my.id/">URL Shortener</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://proxylist.caliph.my.id/">Free Proxy List</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://rmbg.caliph.me/">Remove Background </a></li><li class="menu-item"><a class="menu-link nav-link" href="speedtest.html">Speedtest</a></li></ul></li>					</ul>
-					<ul class="menu-btns animated ulnone" data-animate="fadeInDown" data-delay=".85">
-						<li><a href="javascript:void(0)" data-toggle="modal" data-target="#modal-seach" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span><i class="uil-search"></i></span></a></li>
-						<li><a href="admin/auth/login.html" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span>Login</span></a></li>
-					</ul>
-				</nav>
-			</div><!-- .header-navbar @e -->
-		</div>
-	</div>
-</div>
+			
 <!-- Modal @s -->
 <div class="modal fade" id="modal-seach">
 	<div class="modal-dialog">
