--- a/caliph.my.id/index.html
+++ b/caliph.my.id/index.html
@@ -93,7 +93,21 @@
 				</a>
 			</div>
 			<!-- Menu @s -->
-			
+	<div class="header-navbar header-navbar-s1">
+				<nav class="header-menu" id="example-menu-04">
+
+
+
+
+					
+						<li><a href="javascript:void(0)" data-toggle="modal" data-target="#modal-seach" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span><i class="uil-search"></i></span></a></li>
+						<li><a href="admin/auth/login.html" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span>Login</span></a></li>
+					</ul>
+				</nav>
+			</div><!-- .header-navbar @e -->
+		</div>
+	</div>
+</div>		
 <!-- Modal @s -->
 <div class="modal fade" id="modal-seach">
 	<div class="modal-dialog">
