--- a/caliph.my.id/index.html
+++ b/caliph.my.id/index.html
@@ -133,13 +133,13 @@
 								<div class="row align-items-center justify-content-center justify-content-lg-between gutter-vr-30px">
 									<div class="col-lg-6">
 										<div class="banner-caption wide-auto text-center text-lg-left">
-											<h4 class="animated fw-bold my-1" data-animate="fadeInUp" data-delay="1.25">デベロッパー</h4>
+											<h4 class="animated fw-bold my-1" data-animate="fadeInUp" data-delay="1.25">VAJIRA-MD</h4>
 											<div class="cpn-head mt-0">
-												<h1 class="title title-xl-2 animated" data-animate="fadeInUp" data-delay="1.25">Caliph Dev.</h1>
+												<h1 class="title title-xl-2 animated" data-animate="fadeInUp" data-delay="1.25">VajiraOfficial.</h1>
 											</div>
 											<div class="cpn-text cpn-text-s1">
 												<p class="lead animated" data-animate="fadeInUp" data-delay="1.35"><small class="fw-bold">I'm a</small> <span class="headingTyped fw-bold text-light"></span></p>
-												<p class="lead animated" data-animate="fadeInUp" data-delay="1.35">Halo. Nama Saya Caliph Atibrata, Terima Kasih Telah Mengunjungi situs/web ini</p>
+												<p class="lead animated" data-animate="fadeInUp" data-delay="1.35">Hello. My name is Vajira Rathnayaka, thank you for visiting this site/website.</p>
 											</div>
 											<div class="cpn-btns">
 												<ul class="ulnone btn-grp animated" data-animate="fadeInUp" data-delay="1.45">
