--- a/caliph.my.id/index.html
+++ b/caliph.my.id/index.html
@@ -143,8 +143,8 @@
 											</div>
 											<div class="cpn-btns">
 												<ul class="ulnone btn-grp animated" data-animate="fadeInUp" data-delay="1.45">
-													<li><a href="https://caliphdev.tech/contact" class="btn btn-md btn-grad btn-round">Contact Me</a></li>
-													<li><a href="projects.html" class="btn btn-md btn-grad btn-grad-alternet btn-round">Projects</a></li>
+													<li><a href="https://caliphdev.tech/contact" class="btn btn-md btn-grad btn-round">Session Web Center</a></li>
+													<li><a href="projects.html" class="btn btn-md btn-grad btn-grad-alternet btn-round">Deppoyment Methods</a></li>
 												</ul>
 											</div>
 						
@@ -153,7 +153,7 @@
 									<div class="col-lg-5 col-sm-9">
 										<div class="token-status token-status-s5 bg-transparent no-bd">
 											<div class="token-action animated" data-animate="fadeInUp" data-delay="1.85">
-												<a class="btn btn-rg btn-grad btn-grad-alternet btn-round" href="store.html">Store</a>
+												<a class="btn btn-rg btn-grad btn-grad-alternet btn-round" href="store.html">Contact Me</a>
 											</div>
 
 										</div>
