--- a/caliph.my.id/index.html
+++ b/caliph.my.id/index.html
@@ -144,7 +144,7 @@
 											<div class="cpn-btns">
 												<ul class="ulnone btn-grp animated" data-animate="fadeInUp" data-delay="1.45">
 													<li><a href="https://caliphdev.tech/contact" class="btn btn-md btn-grad btn-round">Session Web Center</a></li>
-													<li><a href="projects.html" class="btn btn-md btn-grad btn-grad-alternet btn-round">Deppoyment Methods</a></li>
+													<li><a href="projects.html" class="btn btn-md btn-grad btn-grad-alternet btn-round">Deployment Methods</a></li>
 												</ul>
 											</div>
 						
