--- a/caliph.my.id/projects.html
+++ b/caliph.my.id/projects.html
@@ -308,6 +308,34 @@
 	</div>
 </footer>	</div>
 
+<div class="preloader"><span class="spinner spinner-round"></span></div>
+
+	<!-- JavaScript -->
+	<script src="theme/frontend/crypto-dark-v3/assets/js/jquery.bundle.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/scripts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/charts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/typed.min.js" defer type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script type="c79a18bdc3e07741bcaf034f-text/javascript">
+		(function($) {
+			'use strict';
+			$(document).ready(function() {
+				$(function() {
+					$(".headingTyped").typed({
+						strings: ['Web Developer.', 'Blogger.', 'Digital Design.'],
+						typeSpeed: 1,
+						backDelay: 2000,
+						loop: true
+					});
+				});
+			})
+		}(jQuery))
+	</script>
+	 <script type="c79a18bdc3e07741bcaf034f-text/javascript">
+/*
+document.oncontextmenu=function(e){return e.preventDefault(),!1},document.onkeydown=function(e){if(123==event.keyCode||e.ctrlKey&&e.shiftKey&&73==e.keyCode||e.ctrlKey&&e.shiftKey&&67==e.keyCode||e.ctrlKey&&e.shiftKey&&74==e.keyCode||e.ctrlKey&&85==e.keyCode)return!1};
+*/
+
+</script> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49" defer></script></body>
 	
 <!-- Mirrored from caliph.my.id/projects by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:28:16 GMT -->
 </html>
