--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -309,7 +309,7 @@
 </footer>	</div>
 <!-- 
 <div class="preloader"><span class="spinner spinner-round"></span></div>
-
+-->
 	
  	<script src="theme/frontend/crypto-dark-v3/assets/js/jquery.bundle.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
 	<script src="theme/frontend/crypto-dark-v3/assets/js/scripts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
@@ -330,7 +330,7 @@
 			})
 		}(jQuery))
 	</script>
-	 <script type="c79a18bdc3e07741bcaf034f-text/javascript">-->
+	 <script type="c79a18bdc3e07741bcaf034f-text/javascript">
 /*
 document.oncontextmenu=function(e){return e.preventDefault(),!1},document.onkeydown=function(e){if(123==event.keyCode||e.ctrlKey&&e.shiftKey&&73==e.keyCode||e.ctrlKey&&e.shiftKey&&67==e.keyCode||e.ctrlKey&&e.shiftKey&&74==e.keyCode||e.ctrlKey&&85==e.keyCode)return!1};
 */
