--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -307,21 +307,22 @@
 		<div class="nk-ovm shape-s"></div>
 	</div>
 </footer>	</div>
-<!-- 
+
+
 <div class="preloader"><span class="spinner spinner-round"></span></div>
--->
-	
- 	<script src="theme/frontend/crypto-dark-v3/assets/js/jquery.bundle.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
-	<script src="theme/frontend/crypto-dark-v3/assets/js/scripts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
-	<script src="theme/frontend/crypto-dark-v3/assets/js/charts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
-	<script src="theme/frontend/crypto-dark-v3/assets/js/typed.min.js" defer type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
-	<script type="c79a18bdc3e07741bcaf034f-text/javascript">
+
+	<!-- JavaScript -->
+	<script src="theme/frontend/crypto-dark-v3/assets/js/jquery.bundle.js" type="7f9fd639a84908e3bc4fdac7-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/scripts.js" type="7f9fd639a84908e3bc4fdac7-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/charts.js" type="7f9fd639a84908e3bc4fdac7-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/typed.min.js" defer type="7f9fd639a84908e3bc4fdac7-text/javascript"></script>
+	<script type="7f9fd639a84908e3bc4fdac7-text/javascript">
 		(function($) {
 			'use strict';
 			$(document).ready(function() {
 				$(function() {
 					$(".headingTyped").typed({
-						strings: ['Web Developer.', 'Blogger.', 'Digital Design.'],
+						strings: ['Backend Developer.', 'Web Developer.', 'Student.', 'Photographer.'],
 						typeSpeed: 1,
 						backDelay: 2000,
 						loop: true
@@ -330,11 +331,12 @@
 			})
 		}(jQuery))
 	</script>
-	 <script type="c79a18bdc3e07741bcaf034f-text/javascript">
+	 <script type="7f9fd639a84908e3bc4fdac7-text/javascript">
 /*
 document.oncontextmenu=function(e){return e.preventDefault(),!1},document.onkeydown=function(e){if(123==event.keyCode||e.ctrlKey&&e.shiftKey&&73==e.keyCode||e.ctrlKey&&e.shiftKey&&67==e.keyCode||e.ctrlKey&&e.shiftKey&&74==e.keyCode||e.ctrlKey&&85==e.keyCode)return!1};
 */
-		 
-	
-<!-- Mirrored from caliph.my.id/projects by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:28:16 GMT -->
-</html>
+</script> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="7f9fd639a84908e3bc4fdac7-|49" defer></script></body>
+
+
+<!-- Mirrored from caliph.my.id/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:24:48 GMT -->
+</html>	
