--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -335,7 +335,10 @@
 /*
 document.oncontextmenu=function(e){return e.preventDefault(),!1},document.onkeydown=function(e){if(123==event.keyCode||e.ctrlKey&&e.shiftKey&&73==e.keyCode||e.ctrlKey&&e.shiftKey&&67==e.keyCode||e.ctrlKey&&e.shiftKey&&74==e.keyCode||e.ctrlKey&&85==e.keyCode)return!1};
 */
-</script> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="7f9fd639a84908e3bc4fdac7-|49" defer></script></body>
+</script>
+	
+	
+</body>
 
 
 <!-- Mirrored from caliph.my.id/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:24:48 GMT -->
