--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 		<TR>
 			<TD BACKGROUND="fade.gif">
 				&middot;
-					<A HREF="vajira.deploy/index.html">
-						VAJIRA MD Website - Vajira Rathnayaka
+					<A HREF="caliph.my.id/index.html">
+						Caliph Website - Caliph Dev
 					</A>		
 			</TD>
 		</TR>
@@ -117,7 +117,7 @@ h4 { margin: 0;  font-weight: bold;  font-size: 1.18em; }
 	</H6>
 	<!-- Mirror and index made by HTTrack Website Copier/3.49-2 [XR&CO'2014] -->
 	<!-- Thanks for using HTTrack Website Copier! -->
-	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=vajira.deploy/index.html">
+	<meta HTTP-EQUIV="Refresh" CONTENT="0; URL=caliph.my.id/index.html">
 
 
 <!-- ==================== Start epilogue ==================== -->
