--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -152,7 +152,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="tikly-tiktok-downloader.html"> <img src="public/storage/thumbnails/c35b2b06a450f87b9cf8e9ba546092ed.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="TiklyDown - TikTok Downloader"></a>
+									<a href="tikly-tiktok-downloader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/c35b2b06a450f87b9cf8e9ba546092ed.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="TiklyDown - TikTok Downloader"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -179,7 +179,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="simple-qrcode-generator.html"> <img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Simple QRCode Generator "></a>
+									<a href="simple-qrcode-generator.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Simple QRCode Generator "></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -206,7 +206,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="FileZone - File Uploader"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="FileZone - File Uploader"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -233,7 +233,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="rikka-bot-whatsapp.html"> <img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Rikka Bot WhatsApp"></a>
+									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Rikka Bot WhatsApp"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -308,13 +308,34 @@
 	</div>
 </footer>	</div>
 
+	<div class="preloader"><span class="spinner spinner-round"></span></div>
+
+	<!-- JavaScript -->
+	<script src="theme/frontend/crypto-dark-v3/assets/js/jquery.bundle.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/scripts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/charts.js" type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script src="theme/frontend/crypto-dark-v3/assets/js/typed.min.js" defer type="c79a18bdc3e07741bcaf034f-text/javascript"></script>
+	<script type="c79a18bdc3e07741bcaf034f-text/javascript">
+		(function($) {
+			'use strict';
+			$(document).ready(function() {
+				$(function() {
+					$(".headingTyped").typed({
+						strings: ['Web Developer.', 'Blogger.', 'Digital Design.'],
+						typeSpeed: 1,
+						backDelay: 2000,
+						loop: true
+					});
+				});
+			})
+		}(jQuery))
+	</script>
+	 <script type="c79a18bdc3e07741bcaf034f-text/javascript">
+/*
+document.oncontextmenu=function(e){return e.preventDefault(),!1},document.onkeydown=function(e){if(123==event.keyCode||e.ctrlKey&&e.shiftKey&&73==e.keyCode||e.ctrlKey&&e.shiftKey&&67==e.keyCode||e.ctrlKey&&e.shiftKey&&74==e.keyCode||e.ctrlKey&&85==e.keyCode)return!1};
+*/
+</script> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49" defer></script></body>
 
 
-
-	
-	
-</body>
-
-
-<!-- Mirrored from caliph.my.id/ by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:24:48 GMT -->
-</html>	
+<!-- Mirrored from caliph.my.id/projects by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 09 Apr 2025 09:28:16 GMT -->
+</html>
