--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- META AREA -->
-	<title>Projects</title>
+	<title>Deployment Platforms</title>
 	<meta name="robots" content="follow, index"/>
 	<meta name="keywords" content="caliph,caliphdev,caliphblog,caliph my id,caliph blog,caliphmyid" />
 	<link rel="shortcut icon" href="public/storage/62b96f1f3085d.jpg">
@@ -98,12 +98,7 @@
 			<!-- Menu @s -->
 			<div class="header-navbar header-navbar-s1">
 				<nav class="header-menu" id="example-menu-04">
-					<ul class="menu menu-s2 animated" data-animate="fadeInDown" data-delay=".75">
-						<li class="menu-item"><a class="menu-link nav-link" href="index.html">Home</a></li><li class="menu-item"><a class="menu-link nav-link" href="blog.html">Blog</a></li><li class="menu-item"><a class="menu-link nav-link" href="store.html">Store</a></li><li class="menu-item"><a class="menu-link nav-link" href="projects.html">Projects</a></li><li class="menu-item has-sub"><a class="menu-link nav-link menu-toggle" href="javascript:void(0)">Contact Me</a><ul class="menu-sub menu-drop"><li class="menu-item"><a class="menu-link nav-link" href="https://wa.me/6285174336766">WhatsApp</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://t.me/caliphdev">Telegram</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://instagram.com/caliph.dev">Instagram </a></li><li class="menu-item"><a class="menu-link nav-link" href="https://twitter.com/caliphdev">Twitter</a></li></ul></li><li class="menu-item has-sub"><a class="menu-link nav-link menu-toggle" href="javascript:void(0)">Tools</a><ul class="menu-sub menu-drop"><li class="menu-item"><a class="menu-link nav-link" href="https://whois.caliph.my.id/">WHOIS</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://clp.my.id/">URL Shortener</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://proxylist.caliph.my.id/">Free Proxy List</a></li><li class="menu-item"><a class="menu-link nav-link" href="https://rmbg.caliph.me/">Remove Background </a></li><li class="menu-item"><a class="menu-link nav-link" href="speedtest.html">Speedtest</a></li></ul></li>					</ul>
-					<ul class="menu-btns animated ulnone" data-animate="fadeInDown" data-delay=".85">
-						<li><a href="javascript:void(0)" data-toggle="modal" data-target="#modal-seach" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span><i class="uil-search"></i></span></a></li>
-						<li><a href="admin/auth/login.html" class="btn btn-rg btn-auto btn-outline btn-grad on-bg-theme btn-round"><span>Login</span></a></li>
-					</ul>
+					
 				</nav>
 			</div><!-- .header-navbar @e -->
 		</div>
@@ -133,7 +128,7 @@
 						<div class="banner-wrap ov-v">
 							<div class="container">
 								<div class="section-head text-center wide-auto-sm">
-									<h2 class="title title-s4 animated" data-animate="fadeInUp" data-delay=".1" title="Projects - ">Projects - </h2>
+									<h2 class="title title-s4 animated" data-animate="fadeInUp" data-delay=".1" title="Projects - ">Deployment Methods</h2>
 								</div>
 							</div>
 						</div>
@@ -158,7 +153,7 @@
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
 										<h6><a href="tikly-tiktok-downloader.html" class="textrespon" style="font-size: 13px;">
-												TiklyDown - TikTok Downloader											</a>
+												Deploy in Heroku											</a>
 										</h6>
 									</div>
 									<div class="card-footer pt-1 px-3 pb-1">
@@ -167,7 +162,7 @@
 												<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle me-2" height="25" width="25">
 											</div>
 											<div class="col lh-1 pl-1">
-												<span class="fw-bold tag-oneline"><small>Caliph Dev</small></span>
+												<span class="fw-bold tag-oneline"><small>VajiraOfficial</small></span>
 											</div>
 											<div class="col-auto">
 												<p class="mb-0"><small><i class="uil-eye"></i></small></p>
@@ -185,7 +180,7 @@
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
 										<h6><a href="simple-qrcode-generator.html" class="textrespon" style="font-size: 13px;">
-												Simple QRCode Generator 											</a>
+												Deploy on Railway 											</a>
 										</h6>
 									</div>
 									<div class="card-footer pt-1 px-3 pb-1">
@@ -194,7 +189,7 @@
 												<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle me-2" height="25" width="25">
 											</div>
 											<div class="col lh-1 pl-1">
-												<span class="fw-bold tag-oneline"><small>Caliph Dev</small></span>
+												<span class="fw-bold tag-oneline"><small>VajiraOfficial</small></span>
 											</div>
 											<div class="col-auto">
 												<p class="mb-0"><small><i class="uil-eye"></i></small></p>
@@ -212,7 +207,7 @@
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
 										<h6><a href="filezone-file-uploader.html" class="textrespon" style="font-size: 13px;">
-												FileZone - File Uploader											</a>
+												Deploy in Vercel											</a>
 										</h6>
 									</div>
 									<div class="card-footer pt-1 px-3 pb-1">
@@ -221,7 +216,7 @@
 												<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle me-2" height="25" width="25">
 											</div>
 											<div class="col lh-1 pl-1">
-												<span class="fw-bold tag-oneline"><small>Caliph Dev</small></span>
+												<span class="fw-bold tag-oneline"><small>VajiraOfficial</small></span>
 											</div>
 											<div class="col-auto">
 												<p class="mb-0"><small><i class="uil-eye"></i></small></p>
@@ -231,15 +226,16 @@
 								</div>
 							</div>
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
+							
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Rikka Bot WhatsApp"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="FileZone - File Uploader"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="rikka-bot-whatsapp.html" class="textrespon" style="font-size: 13px;">
-												Rikka Bot WhatsApp											</a>
+										<h6><a href="filezone-file-uploader.html" class="textrespon" style="font-size: 13px;">
+												Deploy in netlify											</a>
 										</h6>
 									</div>
 									<div class="card-footer pt-1 px-3 pb-1">
@@ -248,7 +244,34 @@
 												<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle me-2" height="25" width="25">
 											</div>
 											<div class="col lh-1 pl-1">
-												<span class="fw-bold tag-oneline"><small>Caliph Dev</small></span>
+												<span class="fw-bold tag-oneline"><small>VajiraOfficial</small></span>
+											</div>
+											<div class="col-auto">
+												<p class="mb-0"><small><i class="uil-eye"></i></small></p>
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">						
+								<!-- Card -->
+								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
+									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Rikka Bot WhatsApp"></a>
+																		<!-- Card body -->
+									<div class="card-body pt-1 px-3 pb-1">
+										<div class="tag-oneline">
+											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
+										<h6><a href="rikka-bot-whatsapp.html" class="textrespon" style="font-size: 13px;">
+												Deploy in Workflow											</a>
+										</h6>
+									</div>
+									<div class="card-footer pt-1 px-3 pb-1">
+										<div class="row align-items-center g-0">
+											<div class="col-auto pr-0">
+												<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle me-2" height="25" width="25">
+											</div>
+											<div class="col lh-1 pl-1">
+												<span class="fw-bold tag-oneline"><small>VajiraOfficial</small></span>
 											</div>
 											<div class="col-auto">
 												<p class="mb-0"><small><i class="uil-eye"></i></small></p>
@@ -297,7 +320,7 @@
 								<img width="64" height="64"= src="public/storage/71b82424cccb54f74e930fee0650678a.svg" srcset="https://caliph.my.id/public/storage/71b82424cccb54f74e930fee0650678a.svg" alt="logo">
 							</a>
 							<div class="copyright-text copyright-text-s3 pdt-m text-center">
-								<p><span class="d-sm-block">Copyright © 2024 Caliph Dev. Created with ♥️</span></p>
+								<p><span class="d-sm-block">Copyright © 2025 VAJIRA-MD</span></p>
 							</div>
 						</div>
 					</div>
