--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -174,7 +174,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="simple-qrcode-generator.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.png" onerror='this.src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.png?v=2"' class="card-img roundedsk p-1" alt="Simple QRCode Generator "></a>
+									<a href="simple-qrcode-generator.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.jpg" onerror='this.src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Heroku "></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
