--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -174,7 +174,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="simple-qrcode-generator.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.jpg" onerror='this.src="https://i.ibb.co/tMDstgR1/1-Chvyj-XBLDw-Xs-Rle-YFTBBe-Q.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Heroku "></a>
+									<a href="simple-qrcode-generator.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/JRS6brkZ/hq720.jpg" onerror='this.src="https://i.ibb.co/JRS6brkZ/hq720.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Heroku "></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -201,7 +201,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="FileZone - File Uploader"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Vercel"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -229,7 +229,7 @@
 							
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="FileZone - File Uploader"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in netlify"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -256,7 +256,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">						
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Rikka Bot WhatsApp"></a>
+									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Workflow"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
