--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -201,7 +201,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/9kt16Hnd/Vercel-OG-Image.png" onerror='this.src="https://i.ibb.co/9kt16Hnd/Vercel-OG-Image.png?v=2"' class="card-img roundedsk p-1" alt="Deploy in Vercel"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/chqBPPMj/vercel-hero.jpg" onerror='this.src="https://i.ibb.co/chqBPPMj/vercel-hero.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Vercel"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -229,7 +229,7 @@
 							
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/default.jpg" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in netlify"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg" onerror='this.src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in netlify"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
@@ -256,7 +256,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">						
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="public/storage/thumbnails/60c11076c03f506206667399517593ab.png" onerror='this.src="public/storage/default5e1f.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Workflow"></a>
+									<a href="rikka-bot-whatsapp.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/sv3wLzqm/1-JLYl-SLSK8-AZo8gt9-Ud-Yq-A.jpg" onerror='this.src="https://i.ibb.co/sv3wLzqm/1-JLYl-SLSK8-AZo8gt9-Ud-Yq-A.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Workflow"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
