--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -201,7 +201,7 @@
 													<div class="col-xl-3 col-lg-3 col-md-6 col-6" style="padding-left: 4px; padding-right: 4px;">
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/S7VV2BzD/vercel-thumbnail.webp" onerror='this.src="https://i.ibb.co/S7VV2BzD/vercel-thumbnail.webp?v=2"' class="card-img roundedsk p-1" alt="Deploy in Vercel"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/C3TwHSJj/vercel.jpg" onerror='this.src="https://i.ibb.co/C3TwHSJj/vercel.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Vercel"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
