--- a/vajira.deploy/projects.html
+++ b/vajira.deploy/projects.html
@@ -152,7 +152,7 @@
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="tikly-tiktok-downloader.html" class="textrespon" style="font-size: 13px;">
+										<h6><a href="heroku.html" class="textrespon" style="font-size: 13px;">
 												Deploy in Heroku											</a>
 										</h6>
 									</div>
@@ -179,7 +179,7 @@
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="simple-qrcode-generator.html" class="textrespon" style="font-size: 13px;">
+										<h6><a href="railway.html" class="textrespon" style="font-size: 13px;">
 												Deploy on Railway 											</a>
 										</h6>
 									</div>
@@ -206,7 +206,7 @@
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="filezone-file-uploader.html" class="textrespon" style="font-size: 13px;">
+										<h6><a href="vercel.html" class="textrespon" style="font-size: 13px;">
 												Deploy in Vercel											</a>
 										</h6>
 									</div>
@@ -229,13 +229,13 @@
 							
 								<!-- Card -->
 								<div class="card blog p-0 mb-4 shadow" style="height: 95%;">
-									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg" onerror='this.src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in netlify"></a>
+									<a href="filezone-file-uploader.html"> <script src="cdn-cgi/scripts/7d0fa10a/cloudflare-static/rocket-loader.min.js" data-cf-settings="c79a18bdc3e07741bcaf034f-|49"></script><img src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg" onerror='this.src="https://i.ibb.co/Nd8q1nsp/copy-of-copy-of-blog-covers-2021-11-11t105359-633.jpg?v=2"' class="card-img roundedsk p-1" alt="Deploy in Netlify"></a>
 																		<!-- Card body -->
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="filezone-file-uploader.html" class="textrespon" style="font-size: 13px;">
-												Deploy in netlify											</a>
+										<h6><a href="netlify.html" class="textrespon" style="font-size: 13px;">
+												Deploy in Netlify											</a>
 										</h6>
 									</div>
 									<div class="card-footer pt-1 px-3 pb-1">
@@ -261,7 +261,7 @@
 									<div class="card-body pt-1 px-3 pb-1">
 										<div class="tag-oneline">
 											<a href="projects/web.html" class="fw-bold mr-1"><small><i class="uil-tag"></i>web</small></a>										</div>
-										<h6><a href="rikka-bot-whatsapp.html" class="textrespon" style="font-size: 13px;">
+										<h6><a href="workflow.html" class="textrespon" style="font-size: 13px;">
 												Deploy in Workflow											</a>
 										</h6>
 									</div>
