--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -8,7 +8,7 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<!-- META AREA -->
-	<title>Deploy in Heroki</title>
+	<title>Deploy in Heroku</title>
 	<meta name="robots" content="follow, index"/>
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="public/storage/62b96f1f3085d.jpg">
@@ -17,8 +17,8 @@
  
 Cobain deh pake ini:
 Klik Disini" name="description" />
-	<meta content="Caliph Dev" name="author" />
-	<link rel="canonical" href="tikly-tiktok-downloader.html" />
+	<meta content=VAJIRA-MD" name="author" />
+	<link rel="canonical" href="heroku.html" />
 	<meta property="og:locale" content="en_US" />
 	<meta property="bb:client_area" content="heroku.html">
 	<meta property="og:url" content="heroku.html" />
@@ -155,16 +155,16 @@ Klik Disini" />
 							<div class="card-body p-0">
 								<p>
 									<a class="mr-1" href="projects/web.html"><i class="uil-tag"></i> web</a>								</p>
-								<h5>TiklyDown - TikTok Downloader</h5>
+								<h5>Deploy in Heroku</h5>
 								<small><span class="d-inline-block fw-bold"><i class="uil-clock"></i> 2023-01-08 08:19:44</span></small>
 								<hr>
 								<div class="d-flex justify-content-between align-items-center mb-4">
 									<div class="d-flex align-items-center">
 										<img src="public/storage/avatar/0f180002204ea2fd39a3993cbbd880ec.jpg" alt="Caliph Dev" class="rounded-circle avatar-md" width="40">
 										<div class="ml-2">
-											<h6 style="margin-bottom: 1px;">Caliph Dev</h5>
+											<h6 style="margin-bottom: 1px;">VAJIRA-MD</h5>
 												<span class="text-info">
-													<p class="fw-normal">Author Content Creator</p>
+													<p class="fw-normal">VajiraOfficial</p>
 												</span>
 										</div>
 									</div>
@@ -210,29 +210,8 @@ Klik Disini" />
 																			</div>
 								</div>
 
-								<p>Cari cara mudah untuk mengunduh video TikTok ke perangkat Anda? TiklyDown adalah jawabannya. Alat download TikTok gratis ini memudahkan Anda untuk mengunduh video TikTok favorit Anda dengan satu klik saja. Cukup salin dan tempel link TikTok ke dalam TiklyDown dan pilih format file yang ingin Anda simpan. Tidak hanya mudah digunakan, TiklyDown juga menawarkan kecepatan download yang cepat dan kualitas video yang tinggi. Jangan lewatkan kesempatan untuk mengunduh video TikTok pilihan Anda dengan TiklyDown. Kunjungi <a href="https://tiklydown.me/">https://tiklydown.me</a> sekarang untuk mencoba.</p>								<hr>
-								<div class="d-flex align-items-center justify-content-between">
-									<div class="blog-detail-share">
-										<a href="https://www.facebook.com/sharer/sharer.php?u=https://caliph.my.id/tikly-tiktok-downloader" target="_blank">
-											<i class="font-medium-5 text-light cursor-pointer uil-facebook-f" role="button"></i>
-										</a>
-									</div>
-									<div class="blog-detail-share">
-										<a href="whatsapp://send?text=https://caliph.my.id/tikly-tiktok-downloader" target="_blank" data-action="share/whatsapp/share">
-											<i class="font-medium-5 text-light cursor-pointer uil-whatsapp" role="button"></i>
-										</a>
-									</div>
-									<div class="blog-detail-share">
-										<a href="https://twitter.com/intent/tweet?url=https://caliph.my.id/tikly-tiktok-downloader" target="_blank">
-											<i class="font-medium-5 text-light cursor-pointer uil-twitter" role="button"></i>
-										</a>
-									</div>
-									<div class="blog-detail-share">
-										<a href="https://www.linkedin.com/sharing/share-offsite/?url=https://caliph.my.id/tikly-tiktok-downloader" target="_blank">
-											<i class="font-medium-5 text-light cursor-pointer uil-linkedin" role="button"></i>
-										</a>
-									</div>
-								</div>
+								<p>You cn now deploy VAJIRA-MD in heroku platform. no banned, no crash amd no bugs. you cn enjoy after deploy in heroku super fast amd secure your accounts. enjoy guys good luck! <a href="https://www.heroku.com/">Click Here</a> Create a account.</p>								<hr>
+								
 							</div>
 						</div>
 						<div class="mt-3" id="disqus_thread"></div>
@@ -267,7 +246,7 @@ Klik Disini" />
 								<img width="64" height="64"= src="public/storage/71b82424cccb54f74e930fee0650678a.svg" srcset="https://caliph.my.id/public/storage/71b82424cccb54f74e930fee0650678a.svg" alt="logo">
 							</a>
 							<div class="copyright-text copyright-text-s3 pdt-m text-center">
-								<p><span class="d-sm-block">Copyright © 2024 Caliph Dev. Created with ♥️</span></p>
+								<p><span class="d-sm-block">Copyright © 2025 VajiraOfficial.</span></p>
 							</div>
 						</div>
 					</div>
