--- a/vajira.deploy/heroku.html
+++ b/vajira.deploy/heroku.html
@@ -204,7 +204,7 @@ Klik Disini" />
 																					<div class="col-12 col-xl-6 col-lg-5">
 												<div class="card shadow blog p-2 mb-3">
 																										<div class="d-grid">
-														<a href="https://github.com/caliphdev/tikly" target="_blank" class="btn btn-info w-100 mb-1 btn-md"><i class="uil-down-arrow"></i> DOWNLOAD</a><a href="https://tikly.my.id/" target="_blank" class="btn btn-primary w-100 mb-1 btn-md"><i class="uil-laptop"></i> DEMO</a>													</div>
+														<a href="https://github.com/VajiraOfficialBot/VAJIRA-MD" target="_blank" class="btn btn-info w-100 mb-1 btn-md"><i class="uil-down-arrow"></i> DOWNLOAD</a><a href="https://dashboard.heroku.com/new?template=https://github.com/VajiraOfficialBot/VAJIRA-MD" target="_blank" class="btn btn-primary w-100 mb-1 btn-md"><i class="uil-laptop"></i> DEPLOY HERE</a>													</div>
 												</div>
 											</div>
 																			</div>
